--- a/index.html
+++ b/index.html
@@ -6,7 +6,23 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Salom</h1>
-    <h1>men shu yerda</h1>
+    <form>
+        <label>
+            a tomon:
+            <input type="text" class="input1">
+        </label>
+        <label>
+            b tomon:
+            <input type="text" class="input2">
+        </label>
+        <label>
+            c tomon:
+            <input type="text" class="input3">
+        </label>
+        <label>
+            hisoblash:
+            <input type="text" class="hisoblash">
+        </label>
+    </form>
 </body>
 </html>
