--- a/index.html
+++ b/index.html
@@ -10,17 +10,28 @@
     <form class="box">
         <label>
             a tomon:
-            <input type="number" class="input1">
+            <input type="text" class="input1">
         </label>
         <label>
             b tomon:
-            <input type="number" class="input2">
+            <input type="text" class="input2">
         </label>
         <label>
             c tomon:
-            <input type="number" class="input3">
+            <input type="text" class="input3">
+        </label>
+        <label>
+            Peremetri:
+            <div class="peremetr">
+            </div>
+        </label>
+        <label>
+            Yuzasi:
+            <div class="yuza">
+            </div>
         </label>
         <button class="btn">Hisoblash</button>
     </form>
 </body>
+<script src="./main.js"></script>
 </html>
