--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
         </label>
         <button class="btn">Hisoblash</button>
     </form>
+    <h2 class="a_tomon">a</h2>
+    <h2 class="b_tomon">b</h2>
+    <h2 class="c_tomon">c</h2>
+    <div class="threeangel">
+        <h2 class="p1">P=</h2>
+        <h2 class="s1">S=</h2>
+    </div>
 </body>
 <script src="./main.js"></script>
 </html>
